--- a/styleit1.css
+++ b/styleit1.css
@@ -184,20 +184,17 @@ a {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: auto;
         margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 40px;
+            margin-right: 40px;
 
         width: 50vh;
         height: 26vh;
         flex-direction: row;
-        padding: 10px;
         border-radius: 30px;
         background-color: white;
 
     }
-
 
 
     .contenthead {
@@ -217,7 +214,6 @@ a {
         margin-top: 10px;
         font-size: 20px;
     }
-
 
     .contentimg {
         /* background-color: #EAEAEA; */
@@ -242,6 +238,62 @@ a {
         justify-content: space-between;
         width: 25vh;
     }
+}
+
+@media(max-width:550px) {
+
+    #cardmobile {
+        width: 45vh;
+    }
+
+    .contenthead {
+        font-size: 25px;
+    }
+
+    .downloadbtn {
+        width: 15vh;
+    }
+}
+
+@media(max-width:400px) {
+
+    #cardmobile {
+        width: 40vh;
+    }
+
+    .contenthead {
+        font-size: 25px;
+    }
+
+    .downloadbtn {
+        width: 15vh;
+    }
+
+    .contenthead {
+        font-size: 18px;
+    }
+
+    .downloadbtn {
+        width: 13vh;
+    }
+}
 
 
+@media(max-width:400px) and (max-height:700px) {
+    #cardmobile {
+        width: 47vh;
+    }
+
+    .contenthead {
+        font-size: 20px;
+    }
+
+        .contentsubheader {
+            font-size: 17px;
+        }
+
+        .downloadbtn {
+            width: 15vh;
+            height: 5vh;
+        }
 }
