--- a/public/index.css
+++ b/public/index.css
@@ -50,11 +50,14 @@ li {
     align-items: center;
     justify-content: center;
     font-size: auto;
-        color: orange;
+    color: white;
         flex-wrap: wrap;
+    background-color: orange;
+        box-shadow: 0px 3px rgb(176, 115, 2)
 }
 
-.mechanical {
+.mechanical,
+.computer {
     font-size: 1.5vh;
 }
 
@@ -74,7 +77,7 @@ li {
         */
 
 */ .itimg {
-        width: 9vh;
+    width: 9vh;
         height: 9vh;
         border-radius: 20px;
 }
