--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+body {
+    background-color: white;
+    margin-left: 2px;
+    margin-right: 2px;
+}
 .header {
     margin-bottom: 0px;
     font-size: 3vh;
@@ -10,6 +15,7 @@
     color: orange;
     text-align: center;
 }
+
 a {
     color: orange;
     font-size: 2vh;
@@ -17,9 +23,6 @@ a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    background-color: white;
-}
 
 li {
     list-style: none;
@@ -27,7 +30,7 @@ li {
 
 #appbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .newcard {
@@ -62,7 +65,7 @@ li {
     color: white;
     flex-wrap: wrap;
     font-size: 2vh;
-        /* background-color: orange; */
+    /* background-color: orange; */
         background: linear-gradient(to top, orange 50%, rgba(255, 134, 4, 0.585));
     
         box-shadow: 0px 3px rgb(176, 115, 2);
@@ -96,60 +99,90 @@ li {
 .commoncard,
 .commoncard2 {
     width: auto;
-    height: 25vh;
+    height: 28vh;
     /* border: 2px solid orange; */
     margin-top: 0.5vh;
     display: flex;
-        align-items: center;
+    align-items: center;
         justify-content: center;
-    
-    
     }
     
     .english,
-    .maths {
-        width: 20vh;
-        height: 25vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-    
-    .imgc {
-        width: 17vh;
-        height: 17vh;
-    }
-    
-    .recimg {
-        width: 20vh;
-        height: 20vh;
-        transition: all;
-        transition-duration: 0.5s;
-        border-radius: 30px;
-    }
-    
-    .recommian {
-        background-color: white;
-        width: 25vh;
-        height: 25vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    
-        flex-direction: row;
-    }
-    
-    .csn {
-        color: orange;
-        font-size: 2vh;
-    }
-    
-    .branch {
-        font-size: 2vh;
+.maths,
+.es {
+    position: relative;
+    width: 20vh;
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.imgc {
+    width: 17vh;
+    height: 17vh;
+}
+
+.recimg {
+    width: 20vh;
+    height: 20vh;
+    transition: all;
+    transition-duration: 0.5s;
+    border-radius: 30px;
+}
+
+.recommian {
+    background-color: white;
+    width: 25vh;
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+    flex-direction: row;
+}
+
+.csn {
+    color: orange;
+    font-size: 2vh;
+}
+
+.branch {
+    font-size: 1.5vh;
+        color: black;
     }
 
 .column {
     margin-left: 4vh;
+}
+@media(max-width:400px) {
+
+
+
+    .commoncard {
+        width: 42vh;
+
+    }
+
+    .english,
+    .maths,
+    .es {
+        width: 15vh;
+        height: 25vh;
+    }
+
+    .it,
+    .computer,
+    .electrical,
+    .civil,
+    .mechanical {
+        width: 8vh;
+        font-size: 1.5vh;
+    }
+
+    .english {
+        margin-left: 3vh;
+    }
 }
