--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,7 @@ body {
     margin-left: 2px;
     margin-right: 2px;
 }
+
 .header {
     margin-bottom: 0px;
     font-size: 3vh;
@@ -31,6 +32,7 @@ li {
 #appbar {
     display: flex;
     justify-content: space-evenly;
+    border-bottom: 2px solid black;
 }
 
 .newcard {
@@ -66,7 +68,7 @@ li {
     flex-wrap: wrap;
     font-size: 2vh;
     /* background-color: orange; */
-        background: linear-gradient(to top, orange 50%, rgba(255, 134, 4, 0.585));
+    background: linear-gradient(to top, orange 50%, rgba(255, 134, 4, 0.585));
     
         box-shadow: 0px 3px rgb(176, 115, 2);
         font-weight: bold;
@@ -104,19 +106,21 @@ li {
     margin-top: 0.5vh;
     display: flex;
     align-items: center;
-        justify-content: center;
+    justify-content: center;
     }
     
     .english,
 .maths,
-.es {
+.es,
+.ap {
     position: relative;
-    width: 20vh;
-    height: 25vh;
+    width: auto;
+        height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .imgc {
@@ -151,26 +155,55 @@ li {
 
 .branch {
     font-size: 1.5vh;
-        color: black;
+    color: black;
     }
 
 .column {
     margin-left: 4vh;
+    flex-wrap: wrap;
+    }
+    
+    @media(max-width:2000px) and (min-width:900px) {
+        a {
+            font-size: 3vh;
+        }
+    
+        .imgc {
+            width: 25vh;
+            height: 25vh;
+        
+.csn {
+    font-size: 3vh;
 }
-@media(max-width:400px) {
+
+.branch {
+    font-size: 2vh;
+}
+
+.es {
+    margin-left: 2vh;
+}
+
+.it,
+.computer,
+.electrical,
+.civil,
+.mechanical {
+    width: 17vh;
+    font-size: 3vh;
+}
 
 
+}
 
-    .commoncard {
-        width: 42vh;
-
+@media(max-width:900px) and (min-width:550px) {
+    .imgc {
+        width: 23vh;
+        height: 23vh;
     }
 
-    .english,
-    .maths,
-    .es {
-        width: 15vh;
-        height: 25vh;
+    .csn {
+        font-size: 3vh;
     }
 
     .it,
@@ -178,11 +211,47 @@ li {
     .electrical,
     .civil,
     .mechanical {
-        width: 8vh;
-        font-size: 1.5vh;
+        width: 12vh;
+        font-size: 2vh;
     }
 
-    .english {
-        margin-left: 3vh;
+}
+
+@media(max-width:550px) and (min-width:00px) {
+
+    .imgc {
+        width: 20vh;
+        height: 20vh;
     }
 }
+
+
+@media(max-width:500px) {
+
+
+
+        .commoncard {
+                width: 42vh;
+        
+
+
+                .english,
+                .maths,
+                .es {
+                    width: 15vh;
+                    height: 25vh;
+                }
+
+                .it,
+                .computer,
+                .electrical,
+                .civil,
+                .mechanical {
+                    width: 8vh;
+                    font-size: 1.5vh;
+                }
+
+                .english {
+                    margin-left: 3vh;
+                }
+                }
