--- a/public/index.css
+++ b/public/index.css
@@ -232,6 +232,14 @@ transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     margin-left: 10vh;
     font-size: 20px;
 }
+.foottext{
+    text-align: center;
+    margin-top: 5px;
+    color: rgb(128, 128, 128,0.5);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
 
 @media(max-width:2000px) and (min-width:900px) {
     a {
