--- a/public/it/pp.css
+++ b/public/it/pp.css
@@ -202,7 +202,7 @@ hr {
 
 .recbookname {
     font-weight: bold;
-    font-size: 2vh;
+    font-size: 2.5vh;
 }
 
 .recbookname:hover {
@@ -233,11 +233,11 @@ a {
 }
 .desc {
     text-align: start;
-    font-size: 24px;
+    font-size: 20px;
 }
 .desc2 {
     color: orange;
-    font-size: 30px;
+    font-size: 25px;
 }
 .align{
     display: flex;
@@ -299,6 +299,67 @@ a {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+.drp{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: orange;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(255, 136, 0, 0.8);
+    z-index: 1;
+    
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 9px 9px;
+    text-decoration: none;
+    display: block;
+    font-size: 19px;
+    text-align: center;
+  }
+  .dropdown-content span{
+    color: blue;
+    font-size: 10px;
+  }
+
+  .dropdown-content a:hover {background-color: white;}
+  
+
+  .dropdown:hover .dropdown-content {display: block;}
+  
+
+
+#active{
+    text-decoration: overline;
+    color: orange;
+    width: 3px;
 }
 
 /* Media  */
