--- a/public/slider.css
+++ b/public/slider.css
@@ -1,19 +1,17 @@
 /* Slider  */
 
 .slider {
-    position: fixed;
+    position: relative;
     width: auto;
     height: 20vh;
-    top: 4pc;
     left: 0;
     right: 0;
     background-color: white;
     overflow: hidden;
-    box-shadow: 0px 10px 15px  rgb(128, 128, 128,0.5);
 }
 
 .slide {
-    z-index: 1;
+    z-index: 0;
     position:absolute;
     width: 100%;
     clip-path: circle(0% at 0 100%);
@@ -37,7 +35,6 @@
     color: black;
 }
 .navigation {
-    z-index: 2;
     position: absolute;
     display: flex;
     bottom: 50px;
