--- a/public/index.css
+++ b/public/index.css
@@ -17,11 +17,13 @@ body {
 }
 
 .header1 {
-    margin-bottom: 0px;
-    margin-top: 20px;
-    font-size: 3vh;
+    font-size: 4vh;
+        text-align: start;
     color: orange;
-    text-align: center;
+    margin: 30px 0% 0px 4%;
+        border-left: 15px solid orange;
+        border-radius: 15px;
+        padding-left: 15px;
 }
 
 a {
@@ -326,7 +328,7 @@ a {
 
         font-size: 15px;
     }
-    
+
     .desc2 {
         color: black;
         margin-left: 30px;
@@ -339,7 +341,7 @@ a {
         text-align: start;
         font-size: 15px;
     }
-    
+
     .desc4 {
         font-size: 15px;
         margin-left: 30px;
